:bug: 修复 z-index 被盖掉的问题

--- a/src/components/u-log-viewer.vue/module.css
+++ b/src/components/u-log-viewer.vue/module.css
@@ -38,7 +38,7 @@
 
 .root[display="fixed"] {
     position: fixed;
-    z-index: 1000;
+    z-index: var(--log-viewer-z-index-maximized, 1000);
 }
 
 .root[display="fixed"][position="top"] {
@@ -97,7 +97,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: 1000;
+    z-index: var(--log-viewer-z-index-maximized, 1000);
 }
 
 .button {
